Bug fix: part of form cut off

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -234,8 +234,8 @@ input[type=tel] {
 }
 
 .form_container {
-  position: absolute;
-  top: 100%;
+  position: relative;
+  top: 100px;
 }
 
 #index_heading {
